--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <h1> Dean Barry </h1>
 
         <div id="about">
-            <p> <i>2nd year student at McGill University in Software Engineering & Linguistics.</i></p>
+            <p> <i>3rd year student at McGill University in Software Engineering & Linguistics.</i></p>
         </div>
         <div id="mainsections">
             <div id="projectssection">
