--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <a href="https://dpbarry.github.io/logix/">Logix</a>
                     <p class="caption">Mathematical logic puzzle web app. Combining minimalistic design with maxamilistic QoL.</p>
                     <div class="card-container">
-                        <img id="logix1" class="card" src="assets/logix_homepage.png" alt="Logix homepage">
+                        <img id="logix" class="card" src="assets/logix.png" alt="Logix homepage">
                     </div>
                   </div>
 
