Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1, interactive-widget=resizes-content">
-
+    <link href="assets/Favicon.png" rel="icon" type="image/svg+xml">
 
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
