--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
                   <div class="wrap single-image">
                     <a href="https://github.com/dpbarry/sustainify">Sustainify</a>
-                    <p class="caption">Browser extension for sustainable shopping. Analyzes product pages with multi-pronged AI workflow to break down its sustainability</p>
+                    <p class="caption">Browser extension for sustainable shopping. Analyzes product pages with multi-pronged AI workflow to provide a comprehensive review of its sustainability</p>
                     <div class="card-container">
                         <img id="sustainify" class="card" src="assets/sustainify.png" alt="Sustainify">
                     </div>
